--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -44,8 +44,8 @@
             <artifactId>jetty-rewrite</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
+            <groupId>org.eclipse.jetty.ee10</groupId>
+            <artifactId>jetty-ee10-servlet</artifactId>
         </dependency>
         <dependency>
             <groupId>io.bootique</groupId>
