Upgrade to Jetty 12.1.0 #129
* narrowing "ThreadPool.Utilization" metric to only include the percentage of request threads
ignoring any "special" threads. This is way more meaningful when designing alert thresholds,
but will change alerting a bit for the existing apps
* deprecating "ThreadPool.QueuedRequests" metric, as it no longer shows queued requests. It
  is hardcoded to return zero now

--- a/bootique-jetty-instrumented/src/test/resources/health8.yml
+++ b/bootique-jetty-instrumented/src/test/resources/health8.yml
@@ -1,12 +1,15 @@
 jetty:
   maxThreads: 8
   connectors:
+    # these are the "leased" threads subtracted from "maxThreads" when calculating
+    # utilization
     - acceptorThreads: 2
       selectorThreads: 2
   health:
+    poolUtilizationThresholds:
+      warning: 50%
+      critical: 75%
+    # the config below is deprecated and should be removed in 5.0
     queuedRequestsThresholds:
       warning: 2
       critical: 3
-    poolUtilizationThresholds:
-      warning: 60%
-      critical: 90%
