Upgrading Jersey (used in tests) to 3.1.11

--- a/bootique-jetty-junit5/pom.xml
+++ b/bootique-jetty-junit5/pom.xml
@@ -48,12 +48,12 @@
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-client</artifactId>
-                <version>${jersey3.version}</version>
+                <version>${jersey.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.inject</groupId>
                 <artifactId>jersey-hk2</artifactId>
-                <version>${jersey3.version}</version>
+                <version>${jersey.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
