--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <properties>
 
         <jetty.version>12.1.0</jetty.version>
+        <jersey.version>3.1.11</jersey.version>
 
         <!-- TODO: move websocket versions to bootique-modules-parent -->
         <jakarta.websocket.version>2.0.0</jakarta.websocket.version>
@@ -153,12 +154,12 @@
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-client</artifactId>
-                <version>${jersey3.version}</version>
+                <version>${jersey.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.inject</groupId>
                 <artifactId>jersey-hk2</artifactId>
-                <version>${jersey3.version}</version>
+                <version>${jersey.version}</version>
             </dependency>
 		</dependencies>
 	</dependencyManagement>
