--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,7 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.bootique.modules.parent</groupId>
@@ -28,7 +27,7 @@
 
     <groupId>io.bootique.jetty</groupId>
     <artifactId>bootique-jetty-parent</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0-M2</version>
     <packaging>pom</packaging>
 
     <name>bootique-jetty-parent: parent of Bootique/Jetty integration modules</name>
@@ -54,7 +53,7 @@
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-jetty</developerConnection>
         <url>https://github.com/bootique/bootique-jetty</url>
-        <tag>HEAD</tag>
+        <tag>4.0-M2</tag>
     </scm>
 
     <dependencyManagement>
