--- a/bootique-jetty-websocket/pom.xml
+++ b/bootique-jetty-websocket/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.jetty</groupId>
         <artifactId>bootique-jetty-parent</artifactId>
-        <version>4.0-M2</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-jetty-websocket</artifactId>
